<resources>
    <string name="app_name">Shuttle Reservation</string>
    <string name="Enroll">Enter Enrollment No.</string>
    <string name="Password">Enter Password</string>
    <string name="loggedIn">Keep me logged in</string>
    <string name="logIn">Log In</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Comm">Communicate</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Logout</string>
    <string name="SignUp">Sign Up</string>
    <string name="Name">Name</string>
    <string name="log_out">LogOut</string>
    <string name="booktick">BOOK TICKETS</string>
    <string name="canceltick">CANCEL TICKET</string>
    <string name="destinations">Enter Destinations</string>
    <string name="seats">Seats</string>
    <string name="day">Select Day</string>
    <string name="book">BOOK TICKETS</string>
    <string name="dest_selection">Options: Botanical Garden, Noida City Center</string>
    <string name="day_selection">Options: Friday,Saturday Out,Saturday Back,Sunday</string>
    <string name="reason">Reason For Cancellation(OPTIONAL)</string>
    <string name="cancel">Cancel</string>
    <string name="tag_line">Let\'s Get Going</string>
    <string name="registration_page">Registration</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="already_registered_login_here">Already Registered? Login here</string>
    <string name="enter_email">Enter email</string>
    <string name="select_destination">Select Destination</string>
    <string name="remember_me">Remember Me</string>
    <string name="menu_tickets">My Tickets</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="origin">Origin</string>
    <string name="EmptyTicket">No Tickets To Show</string>
    <string name="ok">OK</string>

</resources>
