<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mainpage.shuttlereservation.presentation.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_tickets"
        android:name="com.mainpage.shuttlereservation.presentation.fragments.TicketFragment"
        android:label="@string/menu_tickets"
        tools:layout="@layout/fragment_ticket" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.mainpage.shuttlereservation.presentation.fragments.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

</navigation>