<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp">

    <TextView
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:text="@string/registration_page"/>

    <TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:gravity="center"
        android:hint="@string/first_name"
        android:textColor="@android:color/black">
        <TextInputEditText
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:lines="1"
            android:maxLines="1"/>
    </TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:gravity="center"
        android:hint="@string/last_name"
        android:layout_margin="20dp"
        android:textColor="@android:color/black"
        android:layout_marginEnd="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rusername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:lines="1"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:gravity="center"
        android:layout_margin="20dp"
        android:hint="@string/password"
        android:textColor="@android:color/black"
        android:layout_marginEnd="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@android:color/black"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:gravity="center"
        android:layout_margin="20dp"
        android:hint="@string/password"
        android:textColor="@android:color/white"
        android:layout_marginEnd="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rpassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:background="@drawable/button_design"
        android:text="@string/register"
        android:onClick="signUp"/>
</LinearLayout>